# nfdinspector

./: .buildinfo  .coveragerc  CONTRIBUTING.md  LICENSE  README.md  code_of_conduct.md  ead_inspector_guide.html  genindex.html  index.html  intro.html  lido_inspector_guide.html  modules.html  nfdinspector.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: ead_inspector_guide.doctree  environment.pickle  index.doctree  intro.doctree  lido_inspector_guide.doctree  modules.doctree  nfdinspector.doctree
.github/workflows/: documentation.yml
_sources/: ead_inspector_guide.rst.txt  index.rst.txt  intro.rst.txt  lido_inspector_guide.rst.txt  nfdinspector.rst.txt
docs/: conf.py  ead_inspector_guide.rst  index.rst  intro.rst  lido_inspector_guide.rst  modules.rst  nfdinspector.rst
src/nfdinspector/: __init__.py  __main__.py  ead_inspector.py  error.py  lido_inspector.py  metadata_inspector.py
tests/: test_ead_inspector.py  test_lido_inspector.py  test_metadata_inspector.py
