[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "NFDInspector"
authors = [
    {name = "Andreas Ketelaer", email = "andreas.ketelaer@bergbaumuseum.de"},
]
description = "A Python module to inspect formal quality problems in research data."
readme = "README.md"
# keywords = ["TODO_KEYWORD_1", "TODO_KEYWORD_2"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/montan-code/nfdinspector"
"Bug Tracker" = "https://github.com/montan-code/nfdinspector/issues"

[tool.setuptools.dynamic]
version = {attr = "nfdinspector.__version__"}
